--- a/next-frontend/src/styles/globals.css
+++ b/next-frontend/src/styles/globals.css
@@ -1,4 +1,4 @@
-@import "tailwindcss/postcss";
+@import "tailwindcss";
 
 :root {
   --background: #ffffff;
@@ -24,5 +24,3 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
-
-
